# embedded_minds

./: .gitignore  CMakeLists.txt  README.md  dependencies-apt.txt  install.sh  voice_test.py
data/diagnoses/: dx_acute_cardiac_event.json  dx_anaphylaxis.json  dx_bleeding_arm_heavy.json  dx_bleeding_arm_light.json  dx_bleeding_body_heavy.json  dx_bleeding_body_light.json  dx_bleeding_leg_heavy.json  dx_bleeding_leg_light.json  dx_cardiac_arrest.json  dx_general_assessment.json  dx_respiratory_failure.json  dx_seizure_emergency.json  dx_stroke.json
data/guidance/: gd_acute_cardiac_event.json  gd_anaphylaxis.json  gd_bleeding_arm_heavy.json  gd_bleeding_arm_light.json  gd_bleeding_body_heavy.json  gd_bleeding_body_light.json  gd_bleeding_leg_heavy.json  gd_bleeding_leg_light.json  gd_cardiac_arrest.json  gd_general_assessment.json  gd_respiratory_failure.json  gd_seizure_emergency.json  gd_stroke.json
data/questions/: q_abnormal_breathing.json  q_bleeding_location.json  q_bleeding_pulsatile.json  q_chest_pain.json  q_facial_droop.json  q_lip_tongue_swelling.json  q_loss_of_consciousness.json  q_massive_bleeding.json  q_one_sided_weakness.json  q_pain_radiation.json  q_seizure.json  q_shortness_of_breath.json  q_skin_color.json  q_skin_reaction.json  q_speech_disorder.json
src/: app_bridge.cpp  app_bridge.h  bleeding_controller.cpp  bleeding_controller.h  core.cpp  core.h  cpr_controller.cpp  cpr_controller.h  event_recorder.cpp  event_recorder.h  main.cpp  max30102_sensor.cpp  max30102_sensor.h  vital_signs_service.cpp  vital_signs_service.h  voice_command_server.cpp  voice_command_server.h
ui/: AcuteCardiacGuidanceScreen.qml  AnaphylaxisGuidanceScreen.qml  BleedingArmHeavyScreen.qml  BleedingArmLightScreen.qml  BleedingBodyHeavyScreen.qml  BleedingBodyLightScreen.qml  BleedingBodyScreen.qml  BleedingLegHeavyScreen.qml  BleedingLegLightScreen.qml  CPRGuidanceScreen.qml  EventDetailScreen.qml  EventsScreen.qml  GuidanceVideoScreen.qml  HomeScreen.qml  ManualMeasurementScreen.qml  QuestionScreen.qml  RespiratoryFailureGuidanceScreen.qml  SeizureGuidanceScreen.qml  SensorPlacementScreen.qml  SettingsScreen.qml  SharedTopBar.qml  StrokeGuidanceScreen.qml  VitalAlertOverlay.qml  _placeholder.txt  main.qml
